<resources>
    <string name="app_name">MDI_</string>
    <string name="tab_text_1">사진</string>
    <string name="tab_text_2">모양</string>
    <string name="tab_text_3">이름</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- fragament_shape_product -->
    <string name="cameraBtn">캡처</string>

    <string name="identificationFront">식별표시 앞</string>
    <string name="identificationBack">식별표시 뒤</string>
    <string name="identificationSearchHint">영문,한글,숫자</string>

    <string name="implicationBtn">포함</string>
    <string name="agreementBtn">일치</string>

    <string name="hoofShape">제형</string>
    <string name="refinementType">정제</string>
    <string name="hardCapsule">경질캡슐</string>
    <string name="softCapsule">연질캡슐</string>

    <string name="shape">모양</string>
    <string name="circle">원형</string>
    <string name="ellipse">타원</string>
    <string name="rectangle">장방형</string>
    <string name="semiCircular">반원형</string>
    <string name="rhombus">마름모형</string>
    <string name="triangle">삼각형</string>
    <string name="quadrangle">사각형</string>
    <string name="pentagon">오각형</string>
    <string name="hexagon">육각형</string>
    <string name="octagon">팔각형</string>
    <string name="etc">기타</string>
    <string name="color">색상</string>

    <string name="white">하양</string>
    <string name="yellow">노랑</string>
    <string name="orange">주황</string>
    <string name="pink">분홍</string>
    <string name="red">빨강</string>
    <string name="brown">갈색</string>
    <string name="yellowGreen">연두</string>
    <string name="green">초록</string>
    <string name="blueGreen">청록</string>
    <string name="blue">파랑</string>
    <string name="sodomy">남색</string>
    <string name="reddishPurple">자주</string>
    <string name="purple">보라</string>
    <string name="gray">회색</string>
    <string name="black">검정</string>
    <string name="transparency">투명</string>

    <string name="initBtn">검색 초기화</string>

    <!-- fragament_name_product -->
    <string name="drugName">약이름을 적어주세요.</string>
    <string name="searchBtn">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="camera_fragment">카메라파트</string>
    <string name="shape_fragment">모양파트</string>
    <string name="name_fragment">이름파트</string>

    <string name="detailType">제형</string>
    <string name="detailColor">색깔</string>
    <string name="detailShape">모양</string>
    <string name="detailFront">앞</string>
    <string name="detailBack">뒤</string>
    <string name="detailText">식별표시</string>
    <string name="detailSize">사이즈(mm)</string>
    <string name="detailLargeSize">장축</string>
    <string name="detailShortSize">단축</string>
    <string name="detailTemper">성상</string>
</resources>
